syntax = "proto3";

option go_package = "./;cart_purchase";

package cart_purchase;

service CartPurchaseService {
  rpc AddPurchase(AddPurchaseRequest) returns (AddPurchaseResponse);
  rpc GetPurchasesByUserID(GetPurchasesByUserIDRequest) returns (GetPurchasesByUserIDResponse);
  rpc GetCartByID(GetCartByIDRequest) returns (GetCartByIDResponse);
  rpc GetCartByUserID(GetCartByUserIDRequest) returns (GetCartByUserIDResponse);
  rpc AddAdvertToCart(AddAdvertToCartRequest) returns (AddAdvertToCartResponse);
  rpc DeleteAdvertFromCart(DeleteAdvertFromCartRequest) returns (DeleteAdvertFromCartResponse);
  rpc CheckCartExists(CheckCartExistsRequest) returns (CheckCartExistsResponse);
  rpc Ping(NoContent) returns (NoContent);  
}

message NoContent {}

message AddAdvertToCartRequest {
  string user_id = 1;
  string advert_id = 2;
}

message AddAdvertToCartResponse {
  string message = 1;
}

message DeleteAdvertFromCartRequest {
  string cart_id = 1;
  string advert_id = 2;
}

message DeleteAdvertFromCartResponse {
  string message = 1;
}

message CheckCartExistsRequest {
  string user_id = 1;
}

message CheckCartExistsResponse {
  string cart_id = 1;
}

message AddPurchaseRequest {
  string cart_id = 1;
  string address = 2;
  PaymentMethod payment_method = 3;
  DeliveryMethod delivery_method = 4;
  string user_id = 5;
}

message AddPurchaseResponse {
  string id = 1;
  string seller_id = 2;
  string customer_id = 3;
  string address = 4;
  repeated PreviewAdvertCard adverts = 5;
  PurchaseStatus status = 6;
  PaymentMethod payment_method = 7;
  DeliveryMethod delivery_method = 8;
}

message GetPurchasesByUserIDRequest {
  string user_id = 1;
}

message GetPurchasesByUserIDResponse {
  repeated PurchaseResponse purchases = 1;
}

message GetCartByIDRequest {
  string cart_id = 1;
}

message GetCartByIDResponse {
  Cart cart = 1;
}

message GetCartByUserIDRequest {
  string user_id = 1;
}

message GetCartByUserIDResponse {
  Cart cart = 1;
}

message PreviewAdvert {
  string id = 1;
  string title = 2;
  uint64 price = 3;
  string image_id = 4;
  string category_id = 5;
  string seller_id = 6;
  AdvertStatus status = 7;
  string location = 8;
  bool has_delivery = 9;
}

message PreviewAdvertCard {
  PreviewAdvert preview = 1;
  bool is_saved = 2;
  bool is_viewed = 3;
}

message CartPurchase {
  string seller_id = 1;
  repeated PreviewAdvertCard adverts = 2;
}

message Cart {
  string id = 1;
  string user_id = 2;
  repeated CartPurchase cart_purchases = 3;
  CartStatus status = 4;
}

message PurchaseRequest {
  repeated PreviewAdvertCard adverts = 1;
  string address = 2;
  PaymentMethod payment_method = 3;
  DeliveryMethod delivery_method = 4;
  string user_id = 5;
}

message PurchaseResponse {
  string id = 1;
  string seller_id = 2;
  string customer_id = 3;
  repeated PreviewAdvertCard adverts = 4;
  string address = 5;
  PurchaseStatus status = 6;
  PaymentMethod payment_method = 7;
  DeliveryMethod delivery_method = 8;
}

enum PurchaseStatus {
  PURCHASE_STATUS_PENDING = 0;
  PURCHASE_STATUS_IN_PROGRESS = 1;
  PURCHASE_STATUS_COMPLETED = 2;
  PURCHASE_STATUS_CANCELED = 3;
}

enum PaymentMethod {
  PAYMENT_METHOD_CARD = 0;
  PAYMENT_METHOD_CASH = 1;
}

enum DeliveryMethod {
  DELIVERY_METHOD_PICKUP = 0;
  DELIVERY_METHOD_DELIVERY = 1;
}

enum CartStatus {
  CART_STATUS_ACTIVE = 0;
  CART_STATUS_INACTIVE = 1;
}

enum AdvertStatus {
  ADVERT_STATUS_ACTIVE = 0;
  ADVERT_STATUS_INACTIVE = 1;
  ADVERT_STATUS_RESERVED = 2;
}